--- a/shibboleth-base/idp/pom.xml
+++ b/shibboleth-base/idp/pom.xml
@@ -3,7 +3,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>shibboleth-base</artifactId>
-  <packaging>pom</packaging>  
+  <packaging>pom</packaging>
+  <version>1.7.3-SNAPSHOT</version>  
 
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
