--- a/shibboleth-base/idp/src/main/resources/conf/services.properties
+++ b/shibboleth-base/idp/src/main/resources/conf/services.properties
@@ -12,14 +12,24 @@
 #idp.service.logging.failFast = true
 idp.service.logging.checkInterval = PT5M
 
-# Set to shibboleth.LegacyRelyingPartyResolverResources with legacy V2 relying-party.xml
 #idp.service.relyingparty.resources = shibboleth.RelyingPartyResolverResources
 #idp.service.relyingparty.failFast = false
 idp.service.relyingparty.checkInterval = PT15M
+# Set true to limit metadata-driven settings lookup to decoded EntityAttributes
+idp.service.relyingparty.ignoreUnmappedEntityAttributes=true
 
 #idp.service.metadata.resources = shibboleth.MetadataResolverResources
 #idp.service.metadata.failFast = false
 #idp.service.metadata.checkInterval = PT0S
+# Set to false if not using ByReference MetadataFilters for a small perf gain
+#idp.service.metadata.enableByReferenceFilters = true
+
+#idp.service.attribute.registry.resources = shibboleth.AttributeRegistryResources
+#idp.service.attribute.registry.namingRegistry = shibboleth.DefaultNamingRegistry
+#idp.service.attribute.registry.failFast = false
+idp.service.attribute.registry.checkInterval = PT15M
+# Default control of whether to encode XML attribute data with xsi:type
+idp.service.attribute.registry.encodeType = false
 
 #idp.service.attribute.resolver.resources = shibboleth.AttributeResolverResources
 #idp.service.attribute.resolver.failFast = false
@@ -45,13 +55,15 @@ idp.service.access.checkInterval = PT5M
 #idp.service.cas.registry.failFast = false
 idp.service.cas.registry.checkInterval = PT15M
 
+#idp.service.managedBean.resources = shibboleth.ManagedBeanResources
+#idp.service.managedBean.failFast = false
+idp.service.managedBean.checkInterval = PT15M
+
 #idp.message.resources = shibboleth.MessageSourceResources
 #idp.message.cacheSeconds = 300
 
-# Parameters for pre-defined HttpClient instances which perform in-memory and filesystem caching.
-# These are used with components such as remote configuration resources that are explicitly wired
-# with these client instances, *not* by default with HTTP metadata resolvers.
-#idp.httpclient.useTrustEngineTLSSocketFactory = false
+# These settings impact the behavior of the internal HTTP Client used by default
+# with some internal components, but notably *not* for metadata acquisition.
 #idp.httpclient.useSecurityEnhancedTLSSocketFactory = false
 #idp.httpclient.connectionDisregardTLSCertificate = false
 #idp.httpclient.connectionRequestTimeout = PT1M
@@ -59,6 +71,11 @@ idp.service.cas.registry.checkInterval = PT15M
 #idp.httpclient.socketTimeout = PT1M
 #idp.httpclient.maxConnectionsTotal = 100
 #idp.httpclient.maxConnectionsPerRoute = 100
+
+# These are deprecated properties that configure the old caching HttpClient
+# beans that are no longer supported. If you want to manually configure
+# the caching clients, you should define the beans yourself and if desired
+# rely on properties of your own devising.
 #idp.httpclient.memorycaching.maxCacheEntries = 50
 #idp.httpclient.memorycaching.maxCacheEntrySize = 1048576
 #idp.httpclient.filecaching.maxCacheEntries = 100
@@ -68,11 +85,6 @@ idp.httpclient.filecaching.cacheDirectory = %{idp.home}/tmp/httpClientCache
 ############################################################################################
 # Addition to standard Shibboleth - A reloadable subsystem handling Signature Service Support
 #
-
-# Deprecated
-#idp.service.signmessage-decrypt-service.resources = sweid.SignMessageDecryptionResources
-#idp.service.signmessage-decrypt-service.failFast = true
-#idp.service.signmessage-decrypt-service.checkInterval = PT15M
 
 #idp.service.signature-service-support-service.resources = sweid.SignatureServiceSupportResources
 #idp.service.signature-service-support-service.failFast = true
