--- a/shibboleth-base/pom.xml
+++ b/shibboleth-base/pom.xml
@@ -6,10 +6,10 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>shibboleth-base-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.7.2</version>
+  <version>2.0.0-SNAPSHOT</version>
 
   <name>Swedish eID :: Parent POM for Swedish eID :: Shibboleth IdP base</name>
-  <description>Parent POM for base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
+  <description>Parent POM for base packaging of Shibboleth IdP 4.X for the Swedish eID Framework</description>
   <url>https://github.com/litsec/swedish-eid-shibboleth-base</url>
 
   <licenses>
@@ -43,15 +43,14 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>1.8</java.version>
+    <java.version>11</java.version>
 
-    <shibboleth.version>3.4.6</shibboleth.version>
+    <shibboleth.version>4.0.1</shibboleth.version>
 
-    <!-- Needed only for the Javadoc plugin (we don't get the versions from the BOM). -->
-    <opensaml.version>3.4.5</opensaml.version>
-    <opensaml-security-ext.version>1.0.7</opensaml-security-ext.version>
-    <opensaml-ext.version>1.4.4</opensaml-ext.version>
-    <opensaml.swedish-eid.version>1.3.2</opensaml.swedish-eid.version>
+    <opensaml.version>4.0.1</opensaml.version>
+    <opensaml-security-ext.version>2.0.0</opensaml-security-ext.version>
+    <opensaml-ext.version>2.0.1-SNAPSHOT</opensaml-ext.version>
+    <opensaml.swedish-eid.version>2.0.1-SNAPSHOT</opensaml.swedish-eid.version>
 
   </properties>
 
@@ -67,9 +66,12 @@
       <url>https://build.shibboleth.net/nexus/content/repositories/releases</url>
     </repository>
     <repository>
-      <id>spring-repo</id>
-      <name>Spring Repository</name>
-      <url>http://repo.spring.io/release</url>
+      <id>spring-milestones</id>
+      <name>Spring Milestones</name>
+      <url>https://repo.spring.io/milestone</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
     </repository>
   </repositories>
 
@@ -138,31 +140,31 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
-          <version>3.1.1</version>
+          <version>3.1.2</version>
         </plugin>
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-antrun-plugin</artifactId>
-          <version>1.8</version>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-assembly-plugin</artifactId>
-          <version>3.2.0</version>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-javadoc-plugin</artifactId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>3.3.0</version>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.1.1</version>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>3.2.0</version>
         </plugin>
 
       </plugins>
@@ -181,7 +183,7 @@
           <plugin>
             <groupId>org.sonatype.plugins</groupId>
             <artifactId>nexus-staging-maven-plugin</artifactId>
-            <version>1.6.7</version>
+            <version>1.6.8</version>
             <extensions>true</extensions>
             <configuration>
               <serverId>ossrh</serverId>
@@ -234,29 +236,13 @@
               <doctitle>Shibboleth extensions for the Swedish eID Framework - ${project.version}</doctitle>
               <windowtitle>Shibboleth extensions for the Swedish eID Framework - ${project.version}</windowtitle>
               <links>
-                <!-- Doesn't work to use the Shib Wiki links for API docs since the Shib webserver sets X-Frame-Options to SAMEORIGIN which makes it impossible to 
-                  use frames. -->
-                <!-- <link>https://build.shibboleth.net/nexus/content/sites/site/java-opensaml/3.2.0/apidocs/</link> <link>https://build.shibboleth.net/nexus/content/sites/site/java-support/7.2.0/apidocs/</link> 
-                  <link>https://build.shibboleth.net/nexus/content/sites/site/spring-extensions/5.2.0/apidocs/</link> -->
-                <link>https://docs.spring.io/spring/docs/4.3.2.RELEASE/javadoc-api/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/org/opensaml/opensaml-core/${opensaml.version}/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/org/opensaml/opensaml-messaging-api/${opensaml.version}/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/org/opensaml/opensaml-messaging-impl/${opensaml.version}/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/org/opensaml/opensaml-profile-api/${opensaml.version}/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/org/opensaml/opensaml-profile-impl/${opensaml.version}/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/org/opensaml/opensaml-saml-api/${opensaml.version}/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/org/opensaml/opensaml-saml-impl/${opensaml.version}/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/org/opensaml/opensaml-security-api/${opensaml.version}/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/org/opensaml/opensaml-security-impl/${opensaml.version}/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/org/opensaml/opensaml-soap-api/${opensaml.version}/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/org/opensaml/opensaml-soap-impl/${opensaml.version}/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/org/opensaml/opensaml-storage-api/${opensaml.version}/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/org/opensaml/opensaml-storage-impl/${opensaml.version}/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/org/opensaml/opensaml-xmlsec-api/${opensaml.version}/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/org/opensaml/opensaml-xmlsec-impl/${opensaml.version}/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/net/shibboleth/utilities/java-support/7.5.1/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/net/shibboleth/ext/spring-extensions/5.4.1/</link>
-                <link>https://litsec.github.io/opensaml-ext/javadoc/opensaml3/${opensaml-ext.version}/</link>
+                <link>https://build.shibboleth.net/nexus/content/sites/site/java-opensaml/3.2.0/apidocs/</link> 
+                <link>https://build.shibboleth.net/nexus/content/sites/site/java-support/8.0.0/apidocs/</link> 
+                <link>https://build.shibboleth.net/nexus/content/sites/site/spring-extensions/6.0.0/apidocs/</link>
+                <link>https://docs.spring.io/spring/docs/5.2.4.RELEASE/javadoc-api/</link>
+                <link>https://litsec.github.io/opensaml-javadoc-mirror/net/shibboleth/utilities/java-support/8.0.0/</link>
+                <link>https://litsec.github.io/opensaml-javadoc-mirror/net/shibboleth/ext/spring-extensions/6.0.0/</link>
+                <link>https://litsec.github.io/opensaml-ext/javadoc/opensaml4/${opensaml-ext.version}/</link>
                 <link>https://litsec.github.io/swedish-eid-opensaml/javadoc/${opensaml.swedish-eid.version}/</link>
                 <link>https://docs.swedenconnect.se/opensaml-security-ext/javadoc/${opensaml-security-ext.version}</link>
               </links>
