--- a/shibboleth-base/shibboleth-extensions/pom.xml
+++ b/shibboleth-base/shibboleth-extensions/pom.xml
@@ -10,11 +10,11 @@
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
     <artifactId>shibboleth-base-parent</artifactId>
-    <version>1.7.2</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
 
   <name>Swedish eID :: Shibboleth IdP Extension Library</name>
-  <description>Extensions library for Shibboleth IdP 3.X for the Swedish eID Framework</description>
+  <description>Extensions library for Shibboleth IdP 4.X for the Swedish eID Framework</description>
   <url>https://github.com/litsec/swedish-eid-shibboleth-base</url>
 
   <licenses>
@@ -81,12 +81,12 @@
 
     <dependency>
       <groupId>se.litsec.opensaml</groupId>
-      <artifactId>opensaml3-ext</artifactId>
+      <artifactId>opensaml4-ext</artifactId>
     </dependency>
 
     <dependency>
       <groupId>se.litsec.opensaml.sweid</groupId>
-      <artifactId>swedish-eid-opensaml3</artifactId>
+      <artifactId>swedish-eid-opensaml4</artifactId>
     </dependency>
 
     <dependency>
@@ -128,6 +128,12 @@
       <groupId>net.shibboleth.idp</groupId>
       <artifactId>idp-attribute-api</artifactId>
     </dependency>
+    
+    <dependency>
+      <groupId>net.shibboleth.idp</groupId>
+      <artifactId>idp-attribute-impl</artifactId>
+      <version>4.0.1</version>
+    </dependency>    
 
     <dependency>
       <groupId>net.shibboleth.idp</groupId>
