Port to Shibboleth 4

--- a/shibboleth-base/idp/src/main/resources/metadata/metadata.properties
+++ b/shibboleth-base/idp/src/main/resources/metadata/metadata.properties
@@ -23,6 +23,13 @@ idp.metadata.uiInfo.displayName.en=Swedish eID reference IdP (change this)
 idp.metadata.uiInfo.displayName.sv=Referens-IdP f\u00f6r svensk e-legitimation (change this)
 idp.metadata.uiInfo.description.en=Reference IdP for the Swedish eID framework (change this)
 idp.metadata.uiInfo.description.sv=Referens-IdP f\u00f6r svensk e-legitimation (change this)
-idp.metadata.uiInfo.logo.size16x16=images/eln_16x16.png
-idp.metadata.uiInfo.logo.size68x68=images/eln_68x68.png
-idp.metadata.uiInfo.logo.size160x90=images/eln_160x90.png
+
+idp.metadata.uiInfo.smallLogo.url=%{idp.baseurl}/images/sc-logo-notext.svg
+idp.metadata.uiInfo.smallLogo.width=68
+idp.metadata.uiInfo.smallLogo.height=68
+
+idp.metadata.uiInfo.largeLogo.url=%{idp.baseurl}/images/sc-logo.svg
+idp.metadata.uiInfo.largeLogo.width=391
+idp.metadata.uiInfo.largeLogo.height=140
+
+
