--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -650,8 +650,7 @@
         </exclusions>
       </dependency>
 
-      <!-- Jackson -->
-      <!-- 
+      <!-- Jackson --> 
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-core</artifactId>
@@ -676,16 +675,15 @@
         <type>jar</type>
       </dependency>
 
-      <dependency>
-        <groupId>com.fasterxml.jackson.datatype</groupId>
-        <artifactId>jackson-datatype-joda</artifactId>
-        <version>${jackson.version}</version>
-        <scope>provided</scope>
-        <type>jar</type>
-      </dependency>
-      -->
-
       <!-- Misc -->
+      <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+        <version>1.15</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      
       <dependency>
         <groupId>joda-time</groupId>
         <artifactId>joda-time</artifactId>
