--- a/shibboleth-base/idp/pom.xml
+++ b/shibboleth-base/idp/pom.xml
@@ -4,7 +4,6 @@
 
   <artifactId>shibboleth-base</artifactId>
   <packaging>pom</packaging>
-  <version>2.0.0-SNAPSHOT</version>  
 
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
@@ -91,6 +90,12 @@
       <artifactId>commons-lang3</artifactId>
       <scope>compile</scope>
     </dependency>
+    
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <scope>compile</scope>
+    </dependency>    
 
     <!-- And then add our libs ... -->    
     <dependency>
@@ -180,7 +185,6 @@
       </plugin>
 
       <!-- Copies our extensions into the Shibboleth distribution -->
-      <!-- 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
@@ -206,7 +210,6 @@
           </execution>
         </executions>
       </plugin>
-      -->
 
       <!-- Copy additional files -->
       <plugin>
@@ -224,6 +227,9 @@
                 <delete file="${project.build.directory}/shibboleth-identity-provider-${shibboleth.version}/webapp/WEB-INF/lib/bcpkix-jdk15on-1.64.jar" />
                 <delete file="${project.build.directory}/shibboleth-identity-provider-${shibboleth.version}/webapp/WEB-INF/lib/guava-28.2-jre.jar" />       
                 <delete file="${project.build.directory}/shibboleth-identity-provider-${shibboleth.version}/webapp/WEB-INF/lib/commons-lang3-3.9.jar" />
+                <delete file="${project.build.directory}/shibboleth-identity-provider-${shibboleth.version}/webapp/WEB-INF/lib/commons-codec-1.14.jar" />
+                <delete file="${project.build.directory}/shibboleth-identity-provider-${shibboleth.version}/webapp/WEB-INF/lib/checker-qual-2.10.0.jar" />
+                <delete file="${project.build.directory}/shibboleth-identity-provider-${shibboleth.version}/webapp/WEB-INF/lib/stax2-api-3.1.4.jar" />                
               </target>
             </configuration>
             <goals>
@@ -232,7 +238,6 @@
           </execution>
         
           <!-- Copy the modifications we made to the files in the webapp directory -->
-          <!-- 
           <execution>
             <id>copy-webapp</id>
             <phase>process-resources</phase>
@@ -247,9 +252,8 @@
               <goal>run</goal>
             </goals>
           </execution>
-          -->
+
           <!-- Copy the changed files into the dist directory (so that Shib install works correctly). -->
-          <!-- 
           <execution>
             <id>copy-to-dist</id>
             <phase>process-resources</phase>
@@ -279,7 +283,6 @@
               <goal>run</goal>
             </goals>
           </execution>
-          -->
         </executions>
       </plugin>
 
