--- a/shibboleth-base/idp/src/main/resources/conf/saml-nameid.properties
+++ b/shibboleth-base/idp/src/main/resources/conf/saml-nameid.properties
@@ -15,7 +15,7 @@
 # Persistent IDs can be computed on the fly with a hash, or managed in a database
 
 # For computed IDs, set a source attribute and a secret salt:
-idp.persistentId.sourceAttribute = %{idp.persistentId.sourceAttribute.value}
+idp.persistentId.sourceAttribute = %{idp.persistentId.sourceAttribute.value:personalIdentityNumber}
 idp.persistentId.useUnfilteredAttributes = true
 # Do *NOT* share the salt with other people, it's like divulging your private key.
 #idp.persistentId.algorithm = SHA
