--- a/shibboleth-base/shibboleth-extensions/pom.xml
+++ b/shibboleth-base/shibboleth-extensions/pom.xml
@@ -132,13 +132,17 @@
     <dependency>
       <groupId>net.shibboleth.idp</groupId>
       <artifactId>idp-attribute-impl</artifactId>
-      <version>4.0.1</version>
     </dependency>    
 
     <dependency>
       <groupId>net.shibboleth.idp</groupId>
       <artifactId>idp-attribute-resolver-api</artifactId>
     </dependency>
+    
+    <dependency>
+      <groupId>net.shibboleth.idp</groupId>
+      <artifactId>idp-profile-spring</artifactId>
+    </dependency>    
 
     <dependency>
       <groupId>net.shibboleth.utilities</groupId>
