Turned off HTML local storage

--- a/shibboleth-base/idp/src/main/resources/conf/idp.properties
+++ b/shibboleth-base/idp/src/main/resources/conf/idp.properties
@@ -129,7 +129,7 @@ idp.security.requireAuthnRequestsSigned = false
 
 # Configuration of client- and server-side storage plugins
 #idp.storage.cleanupInterval = PT10M
-idp.storage.htmlLocalStorage = true
+idp.storage.htmlLocalStorage = false
 
 # Set to true to expose more detailed errors in responses to SPs
 #idp.errors.detailed = false
