--- a/shibboleth-base/pom.xml
+++ b/shibboleth-base/pom.xml
@@ -48,9 +48,9 @@
     <shibboleth.version>4.0.1</shibboleth.version>
 
     <opensaml.version>4.0.1</opensaml.version>
-    <opensaml-security-ext.version>2.0.0</opensaml-security-ext.version>
-    <opensaml-ext.version>2.0.1-SNAPSHOT</opensaml-ext.version>
-    <opensaml.swedish-eid.version>2.0.1-SNAPSHOT</opensaml.swedish-eid.version>
+    <opensaml-security-ext.version>2.0.1</opensaml-security-ext.version>
+    <opensaml-ext.version>2.0.1</opensaml-ext.version>
+    <opensaml.swedish-eid.version>2.0.1</opensaml.swedish-eid.version>
 
   </properties>
 
