--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -42,9 +42,9 @@
 
   <properties>
     <opensaml.version>4.0.1</opensaml.version>
-    <opensaml-security-ext.version>2.0.0</opensaml-security-ext.version>
-    <opensaml-ext.version>2.0.1-SNAPSHOT</opensaml-ext.version>
-    <opensaml.swedish-eid.version>2.0.1-SNAPSHOT</opensaml.swedish-eid.version>
+    <opensaml-security-ext.version>2.0.1</opensaml-security-ext.version>
+    <opensaml-ext.version>2.0.1</opensaml-ext.version>
+    <opensaml.swedish-eid.version>2.0.1</opensaml.swedish-eid.version>
 
     <shibboleth.version>4.0.1</shibboleth.version>
     <shibboleth.java-support.version>8.0.0</shibboleth.java-support.version>
