--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -41,21 +41,21 @@
   </organization>
 
   <properties>
-    <opensaml.version>4.0.1</opensaml.version>
-    <opensaml-security-ext.version>2.0.1</opensaml-security-ext.version>
-    <opensaml-ext.version>2.0.1</opensaml-ext.version>
-    <opensaml.swedish-eid.version>2.0.1</opensaml.swedish-eid.version>
+    <opensaml.version>4.1.1</opensaml.version>
+    <opensaml-security-ext.version>3.1.0</opensaml-security-ext.version>
+    <opensaml-addons.version>1.2.1-SNAPSHOT</opensaml-addons.version>
+    <opensaml.swedish-eid.version>1.2.0</opensaml.swedish-eid.version>
 
-    <shibboleth.version>4.0.1</shibboleth.version>
-    <shibboleth.java-support.version>8.0.0</shibboleth.java-support.version>
-    <shibboleth.spring-extensions.version>6.0.0</shibboleth.spring-extensions.version>
+    <shibboleth.version>4.1.4</shibboleth.version>
+    <shibboleth.java-support.version>8.2.1</shibboleth.java-support.version>
+    <shibboleth.spring-extensions.version>6.1.3</shibboleth.spring-extensions.version>
 
-    <spring.version>5.2.4.RELEASE</spring.version>
+    <spring.version>5.3.9</spring.version>
     
     <spring.webflow.version>2.5.1.RELEASE</spring.webflow.version>
     <spring.mobile.version>2.0.0.M3</spring.mobile.version>
 
-    <jackson.version>2.10.3</jackson.version>
+    <jackson.version>2.12.2</jackson.version>
 
     <slf4j.version>1.7.30</slf4j.version>
     <junit.version>4.13.1</junit.version>
@@ -104,19 +104,19 @@
       <dependency>
         <groupId>org.apache.santuario</groupId>
         <artifactId>xmlsec</artifactId>
-        <version>2.2.1</version>
+        <version>2.2.3</version>
       </dependency>
       
       <dependency>
         <groupId>org.bouncycastle</groupId>
         <artifactId>bcprov-jdk15on</artifactId>
-        <version>1.68</version>
+        <version>1.70</version>
       </dependency>
       
       <dependency>
         <groupId>org.bouncycastle</groupId>
         <artifactId>bcpkix-jdk15on</artifactId>
-        <version>1.68</version>
+        <version>1.70</version>
       </dependency>
       
       <dependency>
@@ -124,13 +124,14 @@
         <artifactId>cryptacular</artifactId>
         <version>1.2.4</version>
       </dependency>
-    
+
+<!--     
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
         <version>30.1-jre</version>
       </dependency>
-      
+-->     
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
@@ -168,9 +169,9 @@
       </dependency>
 
       <dependency>
-        <groupId>se.litsec.opensaml</groupId>
-        <artifactId>opensaml4-ext</artifactId>
-        <version>${opensaml-ext.version}</version>
+        <groupId>se.swedenconnect.opensaml</groupId>
+        <artifactId>opensaml-addons</artifactId>
+        <version>${opensaml-addons.version}</version>
         <type>jar</type>
         <scope>provided</scope>
         <exclusions>
@@ -182,8 +183,8 @@
       </dependency>
 
       <dependency>
-        <groupId>se.litsec.opensaml.sweid</groupId>
-        <artifactId>swedish-eid-opensaml4</artifactId>
+        <groupId>se.swedenconnect.opensaml</groupId>
+        <artifactId>opensaml-swedish-eid</artifactId>
         <version>${opensaml.swedish-eid.version}</version>
         <type>jar</type>
         <scope>provided</scope>
@@ -193,8 +194,8 @@
             <artifactId>opensaml-security-ext</artifactId>
           </exclusion>
           <exclusion>
-            <groupId>se.litsec.opensaml</groupId>
-            <artifactId>opensaml3-ext</artifactId>
+            <groupId>se.swedenconnect.opensaml</groupId>
+            <artifactId>opensaml-addons</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
@@ -677,8 +678,7 @@
       <dependency>
         <groupId>commons-codec</groupId>
         <artifactId>commons-codec</artifactId>
-        <version>1.14</version>
-        <!-- 1.15 doesn't seem to work for Shibboleth -->
+        <version>1.15</version>
         <type>jar</type>
         <scope>compile</scope>
       </dependency>
@@ -686,7 +686,7 @@
       <dependency>
         <groupId>joda-time</groupId>
         <artifactId>joda-time</artifactId>
-        <version>2.10.5</version>
+        <version>2.10.10</version>
         <type>jar</type>
         <scope>provided</scope>
       </dependency>
