--- a/shibboleth-base/pom.xml
+++ b/shibboleth-base/pom.xml
@@ -45,12 +45,12 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>11</java.version>
 
-    <shibboleth.version>4.0.1</shibboleth.version>
+    <shibboleth.version>4.1.4</shibboleth.version>
 
-    <opensaml.version>4.0.1</opensaml.version>
-    <opensaml-security-ext.version>2.0.1</opensaml-security-ext.version>
-    <opensaml-ext.version>2.0.1</opensaml-ext.version>
-    <opensaml.swedish-eid.version>2.0.1</opensaml.swedish-eid.version>
+    <opensaml.version>4.1.1</opensaml.version>
+    <opensaml-security-ext.version>3.1.0</opensaml-security-ext.version>
+    <opensaml-addons.version>1.2.1-SNAPSHOT</opensaml-addons.version>
+    <opensaml.swedish-eid.version>1.2.0</opensaml.swedish-eid.version>
 
   </properties>
 
@@ -189,8 +189,11 @@
               <serverId>ossrh</serverId>
               <nexusUrl>https://oss.sonatype.org/</nexusUrl>
               <autoReleaseAfterClose>false</autoReleaseAfterClose>
-              <!-- Allows manual inspection of the staging repo before deploying it to the central repo. Use 'mvn nexus-staging:release -Prelease' to release and 
-                'mvn nexus-staging:drop' to abort. -->
+              <!-- 
+                Allows manual inspection of the staging repo before deploying it to the central repo. 
+                Use 'mvn nexus-staging:release -Prelease' to release and 
+                'mvn nexus-staging:drop' to abort. 
+              -->
             </configuration>
           </plugin>
 
@@ -236,15 +239,13 @@
               <doctitle>Shibboleth extensions for the Swedish eID Framework - ${project.version}</doctitle>
               <windowtitle>Shibboleth extensions for the Swedish eID Framework - ${project.version}</windowtitle>
               <links>
-                <link>https://build.shibboleth.net/nexus/content/sites/site/java-opensaml/3.2.0/apidocs/</link> 
-                <link>https://build.shibboleth.net/nexus/content/sites/site/java-support/8.0.0/apidocs/</link> 
-                <link>https://build.shibboleth.net/nexus/content/sites/site/spring-extensions/6.0.0/apidocs/</link>
-                <link>https://docs.spring.io/spring/docs/5.2.4.RELEASE/javadoc-api/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/net/shibboleth/utilities/java-support/8.0.0/</link>
-                <link>https://litsec.github.io/opensaml-javadoc-mirror/net/shibboleth/ext/spring-extensions/6.0.0/</link>
-                <link>https://litsec.github.io/opensaml-ext/javadoc/opensaml4/${opensaml-ext.version}/</link>
-                <link>https://litsec.github.io/swedish-eid-opensaml/javadoc/${opensaml.swedish-eid.version}/</link>
-                <link>https://docs.swedenconnect.se/opensaml-security-ext/javadoc/${opensaml-security-ext.version}</link>
+                <link>https://build.shibboleth.net/nexus/content/sites/site/java-opensaml/${opensaml.version}/apidocs/</link> 
+                <link>https://build.shibboleth.net/nexus/content/sites/site/java-support/8.2.1/apidocs/</link> 
+                <link>https://build.shibboleth.net/nexus/content/sites/site/spring-extensions/6.1.3/apidocs/</link>
+                <link>https://docs.spring.io/spring-framework/docs/current/javadoc-api/</link>                
+                <link>https://docs.swedenconnect.se/opensaml-addons/apidoc/</link>
+                <link>https://docs.swedenconnect.se/opensaml-swedish-eid/apidoc/</link>
+                <link>https://docs.swedenconnect.se/opensaml-security-ext/javadoc/latest/</link>
               </links>
               <detectJavaApiLink>true</detectJavaApiLink>
             </configuration>
