--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -6,7 +6,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>shibboleth-base-dependency-bom</artifactId>
   <packaging>pom</packaging>
-  <version>1.7.2</version>
+  <version>1.8.0-SNAPSHOT</version>
 
   <name>Swedish eID :: Dependency BOM :: Shibboleth IdP base dependencies</name>
   <description>BOM (Bill of Materials) for dependencies for users of the base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -44,7 +44,7 @@
     <opensaml.version>3.4.5</opensaml.version>
     <opensaml-security-ext.version>1.0.7</opensaml-security-ext.version>
     <opensaml-ext.version>1.4.4</opensaml-ext.version>
-    <opensaml.swedish-eid.version>1.3.2</opensaml.swedish-eid.version>
+    <opensaml.swedish-eid.version>1.4.0-SNAPSHOT</opensaml.swedish-eid.version>
 
     <shibboleth.version>3.4.6</shibboleth.version>
     <shibboleth.java-support.version>7.5.1</shibboleth.java-support.version>
