--- a/shibboleth-base/idp/src/main/resources/conf/idp.properties
+++ b/shibboleth-base/idp/src/main/resources/conf/idp.properties
@@ -56,6 +56,14 @@ idp.metadata.signing.cert=%{idp.home}/credentials/metadata-signing.crt
 idp.metadata.additional-signing-certs=%{idp.home}/metadata/additional-certs
 
 #
+# Holder-of-key support
+#
+#idp.hok.active=false
+#idp.hok.cert.read-from-header=false
+#idp.hok.cert.header-name=
+#idp.hok.cert.attribute-name=javax.servlet.request.X509Certificate
+
+#
 # Configuration for SAD support
 #
 
