--- a/shibboleth-base/idp/src/main/resources/conf/idp.properties
+++ b/shibboleth-base/idp/src/main/resources/conf/idp.properties
@@ -59,6 +59,7 @@ idp.metadata.additional-signing-certs=%{idp.home}/metadata/additional-certs
 # Holder-of-key support
 #
 #idp.hok.active=false
+#idp.hok.cert.read-eagerly=true
 #idp.hok.cert.read-from-header=false
 #idp.hok.cert.header-name=
 #idp.hok.cert.attribute-name=javax.servlet.request.X509Certificate
