--- a/shibboleth-base/pom.xml
+++ b/shibboleth-base/pom.xml
@@ -6,7 +6,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>shibboleth-base-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.8.0-SNAPSHOT</version>
+  <version>1.8.0</version>
 
   <name>Swedish eID :: Parent POM for Swedish eID :: Shibboleth IdP base</name>
   <description>Parent POM for base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -50,8 +50,8 @@
     <!-- Needed only for the Javadoc plugin (we don't get the versions from the BOM). -->
     <opensaml.version>3.4.5</opensaml.version>
     <opensaml-security-ext.version>1.0.7</opensaml-security-ext.version>
-    <opensaml-ext.version>1.4.4</opensaml-ext.version>
-    <opensaml.swedish-eid.version>1.3.2</opensaml.swedish-eid.version>
+    <opensaml-ext.version>1.4.5</opensaml-ext.version>
+    <opensaml.swedish-eid.version>1.4.0</opensaml.swedish-eid.version>
 
   </properties>
 
